# awesome-selfhosted-web-gen

./: .gitignore  CHANGELOG.md  CNAME  PR_PREVIEW.md  README.md  active-prs.json  config-pr-preview.yml  config.yaml  config.yml  generate.py  index.html  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
aswg/: __init__.py  _completion.py  cli.py  config.py  data_processor.py  related_apps.py  site_generator.py  template_helpers.py  utils.py
config/: config-pr-preview.yml  config.yml
dev-utils/: analyze_buzzwords.py
pr-10/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-11/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-12/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-13/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-14/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-15/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-16/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-17/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-18/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-19/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-24/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-25/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-26/: alternatives.html  browse.html  index.html  robots.txt  sitemap.xml  statistics.html
pr-29/: alternatives.html  browse.html  index.html  robots.txt  (+2 more)
(+44151 files in other folders)
