[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awesome-selfhosted-web-gen"
version = "1.0.0"
description = "A Python-based static site generator that creates a beautiful, interactive website from the awesome-selfhosted-data dataset"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    {name = "Rabenherz112"}
]
keywords = ["static-site-generator", "awesome-selfhosted", "website-generator", "jinja2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "jinja2>=3.1.6",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.13.4",
    "minify-html>=0.16.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pillow>=11.3.0",
]

[project.urls]
Homepage = "https://github.com/Rabenherz112/awesome-selfhosted-web-gen"
Documentation = "https://github.com/Rabenherz112/awesome-selfhosted-web-gen#readme"
Repository = "https://github.com/Rabenherz112/awesome-selfhosted-web-gen"
Issues = "https://github.com/Rabenherz112/awesome-selfhosted-web-gen/issues"

[project.scripts]
aswg = "aswg.cli:main"

[tool.setuptools]
packages = ["aswg"]
include-package-data = true

[tool.setuptools.package-data]
aswg = [
    "templates/**/*",
    "static/**/*",
]
